# SimSiPM

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  compile_commands.json  pyproject.toml  setup.py
.cache/clangd/index/: SiPM.h.7CFC97E969F7505A.idx  SiPMAnalogSignal.cpp.15D9273636945583.idx  SiPMAnalogSignal.h.FC902B94953DB03E.idx  SiPMAnalogSignalPy.cpp.E619593B74AD7AA0.idx  SiPMDebugInfo.h.2197E6FAA7A8F36F.idx  SiPMDebugInfoPy.cpp.C9181954CC793BDB.idx  SiPMHit.h.74AACC2E1CB4905D.idx  SiPMHitPy.cpp.9926AE762D442F26.idx  SiPMProperties.cpp.F24403CB4709F9AF.idx  SiPMProperties.h.B92D550125BE8F9A.idx  SiPMPropertiesPy.cpp.7649161A5733E1CE.idx  SiPMPy.cpp.0AB05E2C20C43C0C.idx  SiPMRandom.cpp.5F2C226753C11E29.idx  SiPMRandom.h.C3B6ACCAAA88CF71.idx  SiPMRandomPy.cpp.245611DB30EFB2FA.idx  SiPMSensor.cpp.0934AC5D06EA758F.idx  SiPMSensor.h.4DE566822E265198.idx  rand.cpp.02E44E61EEDFA6A5.idx  (+7 more)
.github/workflows/: clang.yml  cmake-multi-platform.yml  cmake-single-platform.yml  cmake.yml  codeql-analysis.yml  deploy.yml  deployDev.yml  deployMain.yml  deployOnPyPi.yml  deployOnPypi.yml  deployonTestPyPi.yml  deployonTestPyPiDev.yml  deployonTestPyPiMain.yml  gcc.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
SiPM.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SimSiPM/: SiPM.h  SiPMAdc.h  SiPMAnalogSignal.h  SiPMDebugInfo.h  SiPMDigitalSignal.h  SiPMHit.h  SiPMProperties.h  SiPMSensor.h  fmath.h
bench/: CMakeLists.txt  random.cpp  rng.cpp  sensor.cpp
benchmarking/: a.out  benchmark  benchmark.cpp  malloc  malloc.cpp  plot_rng.py  rand  rand.cpp  rand.json  random  random.cpp  rng.json  simple.cpp
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in
docs/@CMAKE_CURRENT_BINARY_DIR@/html/: doxygen_crawl.html  graph_legend.html  index.html  navtreedata.js
docs/@CMAKE_CURRENT_BINARY_DIR@/latex/: refman.tex
docs/html/: SiPMAdc_8cpp_source.html  SiPMAdc_8h_source.html  SiPMAnalogSignal_8cpp_source.html  SiPMAnalogSignal_8h_source.html  SiPMDebugInfo_8h_source.html  SiPMDigitalSignal_8cpp_source.html  SiPMDigitalSignal_8h_source.html  SiPMHelpers_8h_source.html  SiPMHit_8cpp_source.html  SiPMHit_8h_source.html  SiPMProperties_8cpp_source.html  SiPMProperties_8h_source.html  SiPMRandom_8cpp_source.html  SiPMRandom_8h_source.html  SiPMSensor_8cpp_source.html  SiPMSensor_8h_source.html  SiPM_8h_source.html  _form0_tmp.epsi  _form0_tmp.ps  _formulas.dvi  _si_p_m_8h.html  _si_p_m_8h__incl.map  _si_p_m_8h__incl.md5  _si_p_m_8h_source.html  _si_p_m_adc_8cpp.html  _si_p_m_adc_8cpp__incl.map  _si_p_m_adc_8cpp__incl.md5  _si_p_m_adc_8cpp_source.html  _si_p_m_adc_8h.html  _si_p_m_adc_8h.js  _si_p_m_adc_8h__dep__incl.map  _si_p_m_adc_8h__dep__incl.md5  _si_p_m_adc_8h__incl.map  _si_p_m_adc_8h__incl.md5  _si_p_m_adc_8h_source.html  _si_p_m_analog_signal_8cpp.html  _si_p_m_analog_signal_8cpp__incl.map  _si_p_m_analog_signal_8cpp__incl.md5  _si_p_m_analog_signal_8cpp_source.html  _si_p_m_analog_signal_8h.html  (+178 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+14 more)
docs/latex/: _si_p_m_8h.tex  _si_p_m_8h__incl.md5  _si_p_m_adc_8cpp.tex  _si_p_m_adc_8cpp__incl.md5  _si_p_m_adc_8h.tex  _si_p_m_adc_8h__dep__incl.md5  _si_p_m_adc_8h__incl.md5  _si_p_m_analog_signal_8cpp.tex  _si_p_m_analog_signal_8cpp__incl.md5  _si_p_m_analog_signal_8h.tex  _si_p_m_analog_signal_8h__dep__incl.md5  _si_p_m_analog_signal_8h__incl.md5  _si_p_m_debug_info_8h.tex  _si_p_m_debug_info_8h__dep__incl.md5  _si_p_m_digital_signal_8cpp.tex  _si_p_m_digital_signal_8cpp__incl.md5  _si_p_m_digital_signal_8h.tex  _si_p_m_digital_signal_8h__dep__incl.md5  _si_p_m_digital_signal_8h__incl.md5  _si_p_m_helpers_8h.tex  _si_p_m_helpers_8h__incl.md5  _si_p_m_hit_8cpp.tex  _si_p_m_hit_8cpp__incl.md5  _si_p_m_hit_8h.tex  _si_p_m_hit_8h__dep__incl.md5  _si_p_m_hit_8h__incl.md5  _si_p_m_properties_8cpp.tex  _si_p_m_properties_8cpp__incl.md5  _si_p_m_properties_8h.tex  _si_p_m_properties_8h__dep__incl.md5  _si_p_m_properties_8h__incl.md5  _si_p_m_random_8cpp.tex  _si_p_m_random_8cpp__incl.md5  _si_p_m_random_8h.tex  _si_p_m_random_8h__dep__incl.md5  _si_p_m_random_8h__incl.md5  _si_p_m_sensor_8cpp.tex  _si_p_m_sensor_8cpp__incl.md5  _si_p_m_sensor_8h.tex  _si_p_m_sensor_8h__dep__incl.md5  (+45 more)
examples/: a.out  afterpulse.py  afterpulsing.py  ap.py  cells.py  dcr.py  delays.py  mulptiphoton.py  noise.py  pde.py  primarynoise.py  rng.cpp  saturation.py  signal_annotated.xopp  signalexample.py  signals.py  staircase.py  timing.py  waveforms.py  xt.py
include/: SiPM.h  SiPMAdc.h  SiPMAnalogSignal.h  SiPMDebugInfo.h  SiPMDigitalSignal.h  SiPMHelpers.h  SiPMHit.h  SiPMMath.h  SiPMProperties.h  SiPMRandom.h  SiPMSensor.h  SiPMSimulator.h  SiPMTypes.h
python/: SiPMAnalogSignalPy.cpp  SiPMDebugInfoPy.cpp  SiPMDigitalSignalPy.cpp  SiPMHitPy.cpp  SiPMPropertiesPy.cpp  SiPMPy.cpp  SiPMRandomPy.cpp  SiPMRng.cpp  SiPMSensorPy.cpp  SiPMSimulatorPy.cpp
src/: SiPMAdc.cpp  SiPMAnalogSignal.cpp  SiPMDigitalSignal.cpp  SiPMHelpers.cpp  SiPMProperties.cpp  SiPMRandom.cpp  SiPMSensor.cpp  SiPMSimulator.cpp
src/components/: SiPMHelpers.h  SiPMRandom.cpp  SiPMRandom.h  SiPMRandomvect.cpp  SiPMRandomvect.h
src/lib/: SiPMAdc.cpp  SiPMAnalogSignal.cpp  SiPMDigitalSignal.cpp  SiPMHit.cpp  SiPMProperties.cpp  SiPMSensor.cpp
testing/: a.out  simple.cpp  simple.py
tests/: CMakeLists.txt  Exp.cpp  Gaussian.cpp  Integer.cpp  Poisson.cpp  Rand.cpp  Xoroshiro256p.cpp  Xorshift256.cpp  Xorshift32.cpp  Xorshift64.cpp  properties.cpp  qualification.py  rand.cpp  sensor.cpp  test_python.py  waveforms.py  xorshift.cpp
