include_directories(../src/components)

add_executable(Rand Rand.cpp)
add_executable(Exp Exp.cpp)
add_executable(Integer Integer.cpp)
add_executable(Gaussian Gaussian.cpp)
add_executable(Poisson Poisson.cpp)
add_executable(Xorshift256 Xorshift256.cpp)

target_link_libraries(Rand sipm)
target_link_libraries(Exp sipm)
target_link_libraries(Integer sipm)
target_link_libraries(Gaussian sipm)
target_link_libraries(Poisson sipm)
target_link_libraries(Xorshift256 sipm)
